--- a/scripts/install
+++ b/scripts/install
@@ -30,8 +30,8 @@ ynh_script_progression "Installing Python dependencies..."
 
 pushd $install_dir
 	python3 -m venv venv
-	#REMOVEME? Assuming the install dir is setup using ynh_setup_source, the proper chmod/chowns are now already applied and it shouldn't be necessary to tweak perms | chown -R "$app:" "$install_dir"
-(
+	chown -R "$app:" "$install_dir"
+
 	ynh_exec_as_app $install_dir/venv/bin/pip3 install --upgrade pip setuptools wheel
 	ynh_exec_as_app $install_dir/venv/bin/pip3 install -r "$install_dir/requirements.txt"
 
@@ -41,7 +41,6 @@ pushd $install_dir
 	ynh_hide_warnings ynh_exec_as_app $install_dir/venv/bin/python3 -m nltk.downloader -d "$install_dir/nltk_data" snowball_data
 	ynh_hide_warnings ynh_exec_as_app $install_dir/venv/bin/python3 -m nltk.downloader -d "$install_dir/nltk_data" stopwords
 	ynh_hide_warnings ynh_exec_as_app $install_dir/venv/bin/python3 -m nltk.downloader -d "$install_dir/nltk_data" punkt_tab
-)
 popd
 
 #=================================================
